Form new User com layout

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,33 +1,1 @@
-<%= form_for @user do |f| %>
-  <%= render "layouts/error_mesages", object: f.object %>
-  <%= f.label :name %>
-  <%= f.text_field :name %><br>
-  <%= f.label :mat %>
-  <%= f.text_field :mat %><br>
-
-  <% User.roles.keys.each do |role| %>
-    <%= f.radio_button :role , role %>
-    <%= f.label role.to_sym %>
-  <% end %>
-
-
-  <%#= f.label :role  %><br>
-  <%#= f.select :role, User.roles.keys %>
-
-  <%= f.label :password %>
-  <%= f.text_field :password %><br>
-  <%= f.label :password_confirmation %>
-  <%= f.text_field :password_confirmation %><br>
-
-  <%= f.submit "sign_up" %>
-
-<% end %>
-
-
-<%#= f.label :role %>
-<%#= f.collection_radio_buttons(:role, options_for_roles, :id, :description) do |b| %>
-  <div class="radio">
-    <%#= b.label {b.radio_button } %>
-    <%#= b.label {b.text } %>
-  </div>
-<%# end %>
+<%= render  'users/form' %>
