--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <%= render  'layouts/header' %>
     <div class="container">
 
      <% flash.each do |message_type, message| %>
@@ -23,7 +24,7 @@
 
      <%= yield %>
 
-     
+
    </div>
   </body>
 </html>
