--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,3 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<% if user_signed_in? %>
-  <%= current_user.name %><br>
-  <%= current_user.role %><br>
-  <%= link_to 'Sair', sair_path, method: :delete %>
-  <%= link_to 'Criar conta',  new_user_path %>
-<% else %>
-  <%= link_to 'Entrar',  entrar_path %>
-  <%= link_to 'Criar conta',  new_user_path %>
-<% end %>
-
-
 <div class="container">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
@@ -24,8 +11,8 @@
                   <div class="col col-xs-6 text-right">
                     <% if policy(User).new? %>
                       <%= link_to 'Novo Usuário' , new_user_path , class: "btn btn-sm btn-primary btn-create" %>
-                    <% else %>
-                    <%= link_to 'Novo Usuário' , '#' , class: "btn btn-sm btn-primary btn-create" , disabled: "disabled" %>
+                    <% elsif user_signed_in? %>
+                      <%= link_to 'Novo Usuário' , '#' , class: "btn btn-sm btn-primary btn-create" , disabled: "disabled" %>
                     <% end %>
                   </div>
                 </div>
@@ -35,7 +22,7 @@
 
                   <thead>
                     <tr>
-                        <th><em class="fa fa-cog"></em></th>
+                        <th></th>
                         <th class="hidden-xs">Matricula</th>
                         <th>Nome</th>
                         <th>Cargo</th>
@@ -45,8 +32,18 @@
                     <% @users.each do |user| %>
                           <tr>
                             <td align="center">
-                              <a class="btn btn-default"><em class="fa fa-pencil"></em></a>
-                              <a class="btn btn-danger"><em class="fa fa-trash"></em></a>
+                                <%= link_to edit_user_path(user) , class: "btn btn-default" do %>
+                                  <i class="fa fa-pencil"></i>
+                                <% end -%>
+                                 <% if (current_user.id != user.id ) && policy(@users).destroy?%>
+                                  <%= link_to user_path(user), method: :delete,   class: "btn btn-danger", data: { confirm: "Deseja excluir o usuário  ?"}  do %>
+                                    <i class="fa fa-trash"></i>
+                                  <% end -%>
+                                 <% else %>
+                                    <%= link_to '#',   class: "btn btn-danger", disabled: "disabled"  do %>
+                                    <i class="fa fa-trash"></i>
+                                  <% end -%>
+                                <% end -%>
                             </td>
                             <td class="hidden-xs"><%= user.mat %></td>
                             <td><%= user.name %></td>
@@ -62,19 +59,7 @@
                 <div class="row">
                   <div class="col col-xs-4">Page 1 of 5
                   </div>
-                  <div class="col col-xs-8">
-                    <ul class="pagination hidden-xs pull-right">
-                      <li><a href="#">1</a></li>
-                      <li><a href="#">2</a></li>
-                      <li><a href="#">3</a></li>
-                      <li><a href="#">4</a></li>
-                      <li><a href="#">5</a></li>
-                    </ul>
-                    <ul class="pagination visible-xs pull-right">
-                        <li><a href="#">«</a></li>
-                        <li><a href="#">»</a></li>
-                    </ul>
-                  </div>
+
                 </div>
               </div>
             </div>
